Added interim page for image search

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_cropper: ^11.0.0
   flutter_image_compress: ^2.4.0
   http_parser: ^4.1.2
+  device_info_plus: ^12.1.0
 
 dev_dependencies:
   flutter_test:
