--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,31 @@ dependencies:
   flutter_image_compress: ^2.4.0
   http_parser: ^4.1.2
   device_info_plus: ^12.1.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.4
+
+  # Changing Logo
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/logo_without_bg.png"
+  min_sdk_android: 26 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "path/to/logo_without_bg.png"
+    background_color: "#012747"
+    theme_color: "#f6cf82"
+  windows:
+    generate: true
+    image_path: "path/to/logo_without_bg.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "path/to/logo_without_bg.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
