--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_image_compress: ^2.4.0
   http_parser: ^4.1.2
   device_info_plus: ^12.1.0
+  shimmer: ^3.0.0
   
 
 dev_dependencies:
